# argon2-cpp

./: .gitignore  Blake2b.cpp  Blake2b.h  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt
src/Argon2/: Argon2.cpp  Argon2.h  CMakeLists.txt  Constants.h
src/Blake2/: Blake2b.cpp  Blake2b.h  CMakeLists.txt
src/Intrinsics/: CMakeLists.txt  Intrinsics.h  TargetArch.cmake
src/Intrinsics/ARM/: ARMv8BlamkaCore.s  ArgonIntrinsics.cpp  ArgonIntrinsics.h  BlakeIntrinsics.cpp  BlakeIntrinsics.h  CMakeLists.txt  CompressNEON.cpp  CompressNEON.h  LoadNEON.h  ProcessBlockARMv8.cpp  ProcessBlockARMv8.h  ProcessBlockNEON.cpp  ProcessBlockNEON.h  RotationsNEON.h  blamka.cpp  fblamka-gpregs.s
src/Intrinsics/CrossPlatform/: ArgonIntrinsics.cpp  BlakeIntrinsics.cpp  BlakeIntrinsics.h  CMakeLists.txt
src/Intrinsics/X86/: ArgonIntrinsics.cpp  ArgonIntrinsics.h  BlakeIntrinsics.cpp  BlakeIntrinsics.h  CMakeLists.txt  CompressAVX2.cpp  CompressAVX2.h  CompressAVX512.cpp  CompressAVX512.h  CompressSSE2.cpp  CompressSSE2.h  CompressSSE41.cpp  CompressSSE41.h  CompressSSSE3.cpp  CompressSSSE3.h  IncludeIntrinsics.h  LoadAVX2.h  LoadSSE41.h  ProcessBlockAVX2.cpp  ProcessBlockAVX2.h  ProcessBlockAVX512.cpp  ProcessBlockAVX512.h  ProcessBlockSSE2.cpp  ProcessBlockSSE2.h  ProcessBlockSSSE3.cpp  ProcessBlockSSSE3.h  Rotations.cpp  Rotations.h  RotationsAVX2.h  RotationsAVX512.h  RotationsSSE2.h  RotationsSSSE3.h
src/Nvidia/: Argon2.cu  Argon2.h  Blake2.cu  Blake2.h  CMakeLists.txt
src/Utilities/: CMakeLists.txt  Utilities.cpp  Utilities.h
tests/: CMakeLists.txt  main.cpp
